Upgrade to Java 17 and Gradle 7.