@@ -20,32 +20,32 @@ public class RelationshipStyleTests {
     @Test
     public void test_setPosition_SetsPositionToZero_WhenANegativeNumberIsSpecified() {
         relationshipStyle.setPosition(-1);
-        assertEquals(new Integer(0), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(0), relationshipStyle.getPosition());
     }
 
     @Test
     public void test_setPosition_SetsPositionToOneHundred_WhenANumberGreaterThanOneHundredIsSpecified() {
         relationshipStyle.setPosition(101);
-        assertEquals(new Integer(100), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(100), relationshipStyle.getPosition());
     }
 
     @Test
     public void test_setPosition_SetsPosition_WhenANumberBetweenZeroAndOneHundredIsSpecified() {
         relationshipStyle.setPosition(0);
-        assertEquals(new Integer(0), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(0), relationshipStyle.getPosition());
 
         relationshipStyle.setPosition(1);
-        assertEquals(new Integer(1), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(1), relationshipStyle.getPosition());
 
         relationshipStyle.setPosition(50);
-        assertEquals(new Integer(50), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(50), relationshipStyle.getPosition());
 
 
         relationshipStyle.setPosition(99);
-        assertEquals(new Integer(99), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(99), relationshipStyle.getPosition());
 
         relationshipStyle.setPosition(100);
-        assertEquals(new Integer(100), relationshipStyle.getPosition());
+        assertEquals(Integer.valueOf(100), relationshipStyle.getPosition());
     }
 
     @Test
